# remitly-home-exercise-2024

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: abi_macros.hpp.75F06AAFB9E06ED8.idx  adl_serializer.hpp.15A488C31AB72CFF.idx  begin.hpp.EAFD948A616135C8.idx  binary_reader.hpp.1840BEF8B0423DB5.idx  binary_writer.hpp.927DC13619C872B1.idx  byte_container_with_subtype.hpp.C83380DC2CD62738.idx  cpp_future.hpp.F065C4D070E05376.idx  detected.hpp.179DB85B46D389EA.idx  end.hpp.9A7D0E1129B1B1FD.idx  exceptions.hpp.3BC624BFE088D939.idx  from_json.hpp.F2E36F71296D8502.idx  hash.hpp.DBA546658C9E7E35.idx  hedley.hpp.942689C2E4703B85.idx  hedley_undef.hpp.3A8B4A39912518F8.idx  identity_tag.hpp.9854C9A2BA9058DF.idx  input_adapters.hpp.C2B99BA9994B2F20.idx  internal_iterator.hpp.6D7C23CFA3BD813C.idx  is_sax.hpp.48B1A5A2C749EA2E.idx  iter_impl.hpp.BB006280B9E4F837.idx  iteration_proxy.hpp.96EAD3CF60BB6D85.idx  iterator_traits.hpp.1613880AC1CD1625.idx  json.hpp.86027DEE88815073.idx  json_custom_base_class.hpp.2B92BDAE12E0E659.idx  json_fwd.hpp.AC774D412A89FC7C.idx  json_pointer.hpp.596A287DA47A7E2C.idx  json_ref.hpp.3C11C38236A0890D.idx  json_reverse_iterator.hpp.17367F2F9F402339.idx  json_sax.hpp.48CA95CDE164F558.idx  lexer.hpp.1219EA299DCF8237.idx  macro_scope.hpp.BA7DF9DB9EC7ECCE.idx  macro_unscope.hpp.4C1193A9E4392B6A.idx  main.cpp.9E837FDC8B5CD12C.idx  ordered_map.hpp.5C959446046F17A1.idx  output_adapters.hpp.A48964320DA78F2A.idx  parser.hpp.901C3ECD1D7C2AD2.idx  position_t.hpp.103C4E297E2B2049.idx  (+10 more)
src/: main.cpp  verify_role_policy.hpp
